===============================================

* Changes in behaviour
  * The "(deleted)" marker for unlinked paths of file descriptors is now printed
    outside angle brackets;  the matching of unlinked paths of file descriptors
    no longer includes the " (deleted)" part into consideration.

* Improvements
  * Implemented printing of Unix socket sun_path field's SELinux context.
  * Improved decoding of INET_DIAG_SHUTDOWN NETLINK_SOCK_DIAG netlink attribute.
  * Updated lists of ioctl commands from Linux 5.19.

* Bug fixes

Noteworthy changes in release 5.18 (2022-06-18)
===============================================

* Improvements
  * Added an interface of raising des Strausses awareness.
  * Added --tips option to print strace tips, tricks, and tweaks
    at the end of the tracing session.
  * Enhanced decoding of bpf and io_uring_register syscalls.
  * Implemented decoding of COUNTER_*, RTC_PARAM_GET, and RTC_PARAM_SET ioctl
    commands.
  * Updated lists of BPF_*, BR_*, BTRFS_*, IFA_*, IFLA_*, IORING_*, KEY_*,
    KVM_*, MADV_*, and UFFD_* constants.
  * Updated lists of ioctl commands from Linux 5.18.

* Bug fixes
  * Fixed printing of the updated value of union bpf_attr.next_id
    on the exiting of bpf(BPF_*_GET_NEXT_ID) calls.

Noteworthy changes in release 5.17 (2022-03-26)
===============================================

* Improvements
  * Added 64-bit LoongArch architecture support.
  * Extended personality designation syntax of syscall specification expressions
    to support all@pers and %class@pers.
  * Enhanced rejection of invalid syscall numbers in syscall specification
    expressions.
  * Implemented decoding of set_mempolicy_home_node syscall, introduced
    in Linux 5.17.
  * Implemented decoding of IFLA_GRO_MAX_SIZE and TCA_ACT_IN_HW_COUNT netlink
    attributes.
  * Implemented decoding of PR_SET_VMA operation of prctl syscall.
  * Implemented decoding of siginfo_t.si_pkey field.
  * Implemented decoding of LIRC ioctl commands.