@@ -8,7 +8,8 @@ Noteworthy changes in release ?.?? (????-??-??)
 
 * Improvements
   * Implemented printing of Unix socket sun_path field's SELinux context.
-  * Improved decoding of INET_DIAG_SHUTDOWN NETLINK_SOCK_DIAG netlink attribute.
+  * Improved decoding of INET_DIAG_MD5SIG and INET_DIAG_SHUTDOWN
+    NETLINK_SOCK_DIAG netlink attributes.
   * Updated lists of ioctl commands from Linux 5.19.
 
 * Bug fixes
